deploy/policy/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8ssignedimages
spec:
  crd:
    spec:
      names:
        kind: K8sSignedImages
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8ssignedimages
        violation[{"msg": msg}] {
          container := input_containers[_]
          response := externaldata("ratify-provider", container.image)
          contains(response, "false")
          msg := sprintf("Image %v verification failed %v", [container.image, response])
        }
        input_containers[c] {
            c := input.review.object.spec.template.spec.containers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.template.spec.initContainers[_]
        }
